--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         $("#fileList").append(`<div class="card">
         <div class="card-body justify-content-between">
         <a type="button" class="btn" href="/download/${item}">
-        <h1 class="card-title">${item}</h1>
+        <h5 class="card-title">${item}</h5>
         </a>
-        <a class="btn-close justify-content-end" href="/delete/${item}"></a>
+        <a class="btn-close justify-content-end btn-lg" href="/delete/${item}"></a>
         </div>
         </div>`);
     }
